<resources>
    <string name="app_name">RakMail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="full_name">Full Name</string>
    <string name="select_image">Select Image</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="logout">Logout</string>
    <string name="mail_detail_title">Mail Detail</string>
    <string name="content_avatar">Sender avatar</string>
    <string name="manage_labels">Manage Labels</string>
    <string name="new_label">New label</string>
    <string name="add">Add</string>
    <string name="search_labels">Search labels</string>
    <string name="delete_label">Delete label</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="sent_label">Sent</string>
    <string name="starred_label">Starred</string>
    <string name="drafts_label">Drafts</string>
    <string name="spam_label">Spam</string>
    <string name="bin_label">Bin</string>
    <string name="inbox_label">Inbox</string>
    <string name="mail_deleted_success">Mail Deleted!</string>
    <string name="mail_deleted_error">Error Deleting Mail</string>
    <string name="delete_btn">Delete</string>
    <string name="welcome_to_the_best_mail_app">Welcome to the best mail app!</string>
    <string name="rakmail">RakMail</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_to_rakmail">Sign In to RakMail</string>
    <string name="sign_up_to_rakmail">Sign up to RakMail!</string>
    <string name="inbox">Inbox</string>
    <string name="menu_mark_as">Mark as %s</string>
    <string name="menu_unmark_as">Unmark as %s</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="body">Body</string>
    <string name="delete">Delete</string>
    <string name="compose">Compose</string>
    <string name="your_name">Your Name</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="save_changes">Save Changes</string>
    <string name="blacklist_urls">Blacklist URLs</string>
    <string name="add_url_to_blacklist">Add URL to blacklist</string>
    <string name="add_url">Add URL</string>
    <string name="remove_url_from_blacklist">Remove URL from blacklist</string>
    <string name="remove_url">Remove URL</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="send">send</string>
    <string name="edit_label">Edit Label\n</string>
    <string name="mail_adapter_no_sender">(no sender)</string>
</resources>