<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_system_labels">
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_mail"
            android:title="@string/inbox_label" />
        <item
            android:id="@+id/nav_sent"
            android:icon="@drawable/ic_send"
            android:title="@string/sent_label" />
        <item
            android:id="@+id/nav_starred"
            android:icon="@drawable/ic_star_filled"
            android:tint="?attr/colorOnPrimary"
            android:title="@string/starred_label" />
        <item
            android:id="@+id/nav_drafts"
            android:icon="@drawable/ic_draft"
            android:title="@string/drafts_label" />
        <item
            android:id="@+id/nav_spam"
            android:icon="@drawable/ic_report"
            android:title="@string/spam_label" />
        <item
            android:id="@+id/nav_bin"
            android:icon="@drawable/ic_delete"
            android:tint="?attr/colorOnPrimary"
            android:title="@string/bin_label" />

    </group>
    <group android:id="@+id/group_custom_labels">
    </group>
</menu>
