<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F7FA">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="32dp">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/rakmail"
                android:textColor="@color/primary"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subtitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/welcome_to_the_best_mail_app"
                android:textColor="#6B7A90"
                android:textSize="16sp" />

            <Button
                android:id="@+id/signinButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:elevation="4dp"
                android:fontFamily="sans-serif-medium"
                android:padding="12dp"
                android:text="@string/sign_in"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:elevation="4dp"
                android:fontFamily="sans-serif-medium"
                android:padding="12dp"
                android:text="@string/sign_up"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
